welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:5: error: not found: value biscuits
while ( 2 * biscuits != caseorange + 1 ) { 
            ^